--- a/style.css
+++ b/style.css
@@ -35,6 +35,30 @@ p{
 .section-m1{
     margin: 40px 0;
 }
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #ffff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    transition: 0.2s;
+
+}
+button.white{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color:#ffff;
+    background-color:transparent;
+    border: solid 1px #ffff;
+    cursor: pointer;
+    outline: none;
+    transition: 0.2s;
+
+}
 body{
     width: 100%;
 }
@@ -229,4 +253,133 @@ body{
     right: 10px;
 
 }
+
+#banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url("img/banner/b2.jpg");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+#banner h4{
+    color: #ffff;
+    font-size: 16px;
+
+}
+#banner h2{
+    color: #ffff;
+    font-size: 30px;
+    padding: 10px 0;
+
+}
+#banner h2 span{
+    color:#ef3636;
+}
+#banner button:hover{
+    background-color: #088178;
+    color: #d7dcf4;
+}
+#sm-banner{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
+    background-image: url("img/banner/b17.jpg");
+    min-width: 580px;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    padding: 30px;
+
+
+}
+#sm-banner .banner-box2{
+    background-image: url("img/banner/b10.jpg");
+
+}
+#sm-banner h4{
+    color: #ffff;
+    font-size: 40px;
+    font-weight: 300;
+
+}
+#sm-banner h2{
+    color: #ffff;
+    font-size: 58px;
+    font-weight: 800;
+
+}
+#sm-banner span{
+    color: #ffff;
+    font-size: 20px;
+    font-weight: 500;
+    padding-bottom: 15px;
+    padding-top: 10px;
+
+}
+#sm-banner .banner-box:hover button{
+    background: #088178; 
+    border: 1px solid #088178;
+
+}
+#banner-3{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;
+
+
+}
+#banner-3 .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
+    background-image: url("img/banner/b7.jpg");
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+
+}
+#banner-3 .banner-box2{
+    background-image: url("img/banner/b4.jpg");
+}
+#banner-3 .banner-box3{
+    background-image: url("img/banner/b18.jpg");
+}
+
+#banner-3 h2{
+    color: #ffff;
+    font-weight: 1000px;
+    font-size: 30px;
+    font-style: bold;
+
+}
+#banner-3 h3{
+    color: #0f5a01;
+    font-weight: 1000;
+    font-size: 19px;
+    padding-top: 10px;
+
+}
+
+
+
+
+
 
