--- a/style.css
+++ b/style.css
@@ -597,6 +597,66 @@ footer .copyright{
     }
 }
 
+@media (max-width: 477px){
+    #header {
+        
+        padding: 10px 30px;
+        
+    }
+    #hero {
+       
+        background-position: 55%;
+        padding: 0 20px;
+        
+    }
+    .section-p1 {
+        padding: 20px;
+    }
+    #feature .fe-box {
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #feature {
+        justify-content: space-between;
+        
+    }
+    #product1 .pro {
+        width: 100%;
+        
+    }
+    #banner {
+       
+        height: 40vh;
+       
+    }
+    #sm-banner .banner-box {
+        
+        height: 40vh;
+        
+    }
+    #sm-banner .banner-box2 {
+        margin-top: 20px;
+    }
+    #banner-3 {
+       
+        padding: 0 20px;
+    }
+    #banner-3 .banner-box {
+        
+        width: 100%;
+       
+    }
+    #newsletter .form {
+        width: 100%;
+    }
+    #newsletter {
+       padding: 40px 20px;
+    }
+    footer .copyright {
+        text-align: start;
+    }
+}
+
 
 
 
